[SWOZO-37] dynamic home page
