# web-app-frontend/src/api/models/ActivitySummaryDto.ts
@@ -1,0 +1,111 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI definition
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import {
+    UserDetailsDto,
+    UserDetailsDtoFromJSON,
+    UserDetailsDtoFromJSONTyped,
+    UserDetailsDtoToJSON,
+} from './UserDetailsDto';
+
+/**
+ * 
+ * @export
+ * @interface ActivitySummaryDto
+ */
+export interface ActivitySummaryDto {
+    /**
+     * 
+     * @type {number}
+     * @memberof ActivitySummaryDto
+     */
+    id: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof ActivitySummaryDto
+     */
+    courseId: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof ActivitySummaryDto
+     */
+    name: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ActivitySummaryDto
+     */
+    courseName: string;
+    /**
+     * 
+     * @type {UserDetailsDto}
+     * @memberof ActivitySummaryDto
+     */
+    teacher: UserDetailsDto;
+    /**
+     * 
+     * @type {Date}
+     * @memberof ActivitySummaryDto
+     */
+    startTime: Date;
+    /**
+     * 
+     * @type {Date}
+     * @memberof ActivitySummaryDto
+     */
+    endTime: Date;
+}
+
+export function ActivitySummaryDtoFromJSON(json: any): ActivitySummaryDto {
+    return ActivitySummaryDtoFromJSONTyped(json, false);
+}
+
+export function ActivitySummaryDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): ActivitySummaryDto {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'],
+        'courseId': json['courseId'],
+        'name': json['name'],
+        'courseName': json['courseName'],
+        'teacher': UserDetailsDtoFromJSON(json['teacher']),
+        'startTime': (new Date(json['startTime'])),
+        'endTime': (new Date(json['endTime'])),
+    };
+}
+
+export function ActivitySummaryDtoToJSON(value?: ActivitySummaryDto | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'id': value.id,
+        'courseId': value.courseId,
+        'name': value.name,
+        'courseName': value.courseName,
+        'teacher': UserDetailsDtoToJSON(value.teacher),
+        'startTime': (value.startTime.toISOString()),
+        'endTime': (value.endTime.toISOString()),
+    };
+}
+
